Fixes 'Add App' dropdown in firefox to be aligned properly + removes custom padding on buttons in the home page

--- a/cdap-ui/app/features/overview/overview.less
+++ b/cdap-ui/app/features/overview/overview.less
@@ -215,8 +215,6 @@ body.state-overview {
         margin-bottom: 18px;
       }
       .btn {
-        padding-top: 3px;
-        padding-bottom: 3px;
         font-size: 12px;
       }
       .col-sm-3 {
